# mem0-selfhosted-fastmcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.github/: .shared-config.yaml
scripts/: sync-shared
src/mem0_selfhosted_fastmcp/: __init__.py  server.py
tests/: test_import.py  test_path_policy.py
tests/fixtures/: mem0_openapi_paths.json
