[project]
name = "mem0-selfhosted-fastmcp"
version = "0.1.0"
description = "FastMCP bridge for a self-hosted Mem0 REST API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
]

[project.scripts]
mem0-selfhosted-fastmcp = "mem0_selfhosted_fastmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
