[project]
name = "mem0-selfhosted-fastmcp"
version = "0.1.4"
description = "FastMCP bridge for a self-hosted Mem0 REST API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
]

[tool.mypy]
packages = ["mem0_selfhosted_fastmcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
"mem0_selfhosted_fastmcp" = ["py.typed"]

[project.scripts]
mem0-selfhosted-fastmcp = "mem0_selfhosted_fastmcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
